--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --exec src/index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "migrate": "sequelize db:migrate:status" 
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "brew": "^0.0.8",
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
+    "nodemon": "^2.0.7",
     "tape": "^4.7.0"
   },
   "repository": {
